css/style.css
/* ... */
@media only screen and (max-width: 400px) {
    .video-container {
        overflow: hidden;
        position: relative;
        width: 100%;
    }

    .video-container::after {
        padding-top: 56.25%;
        display: block;
        content: "";
    }

    .video-container iframe {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
    }

    .block {
        width: 75px;
        height: 65px;
        /* display: grid; */

        font-size: 12px;
    }
}

/* .body2 {
	background: Lavender;
	height: 2%;
	display: flex;
	align-items: center;
	justify-content: center;
  }  */

.wrapper {
    display: grid;
    grid-template-columns: repeat(3, 100%);
    overflow: hidden;
    scroll-behavior: smooth;
}
.wrapper section {
    width: 100%;
    position: relative;
    display: grid;
    grid-template-columns: repeat(5, auto);
    margin: 20px 0;
}
.wrapper section .item {
    /* width: max-content; */
    padding: 0 2px;
    transition: 250ms all;
}
.wrapper section .item:hover {
    margin: 0 40px;
    transform: scale(1.2);
}
.wrapper section a {
    position: absolute;
    color: #fff;
    text-decoration: none;
    font-size: 6em;
    background: black;
    width: 80px;
    padding: 20px;
    text-align: center;
    z-index: 1;
}
.wrapper section a:nth-of-type(1) {
    top: 0;
    bottom: 0;
    left: 0;
    background: linear-gradient(-90deg, rgba(0, 0, 0, 0) 0%, black 100%);
}
.wrapper section a:nth-of-type(2) {
    top: 0;
    bottom: 0;
    right: 0;
    background: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, black 100%);
}

@media only screen and (max-width: 600px) {
    a.arrow__btn {
        display: none;
    }
    .wrapper {
        display: none;
    }

    .wrapper section .item {
        max-width: 100%;
    }
}

.tile__img {
    max-width: 65%;
    text-align: center;
    height: auto;
    object-fit: cover;
}

blockquote {
    position: relative;
    padding-left: 30px;
    font-weight: 600;
    color: #373a63;
    padding: 1em;
    padding-right: 0.25em;
    margin-left: 2.25em;
    margin-right: 0.2em;
    max-width: 35em;
    font-size: 15px;
}
blockquote::before {
    content: "“";
    font-family: serif;
    position: absolute;
    right: 100%;
    font-size: 75px;
    line-height: 0px;
    top: 50px;
    color: #674ea7;
    animation: dancing 1s linear infinite;
    display: inline-block;
    transform: rotate(13deg);
}
blockquote::after {
    content: "";
    display: block;
    position: absolute;
    top: 100%;
    width: 80px;
    height: 5px;
    background: #e56d39;
    left: 1em;
}

@keyframes dancing {
    0% {
        transform: rotate(13deg) scale(1.25);
    }

    25% {
        transform: rotate(0deg);
    }

    50% {
        transform: rotate(-13deg) scale(1.25);
    }

    75% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(13deg) scale(1.25);
    }
}

